--- a/freela_do_bem/pubspec.yaml
+++ b/freela_do_bem/pubspec.yaml
@@ -45,7 +45,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -60,11 +61,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+   - family: Open Sans
+     fonts:
+       - asset: assets/fonts/OpenSans-ExtraBold.ttf
+         weight: 800
+       - asset: assets/fonts/OpenSans-Regular.ttf
+         weight: 400
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
