--- a/freela_do_bem/pubspec.yaml
+++ b/freela_do_bem/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  responsive_builder: ^0.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,7 +47,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
